# danksy-subnet

./: .gitignore  Makefile  README.md  pyproject.toml  requirements.txt
src/miner/: cli.py.example  model.py
src/subnet/: cli.py  utils.py
src/subnet/miner/: model.py
src/subnet/validator/: validator.py
src/validator/: _config.py  cli.py  validator.py
tests/miner/: miner_test.py
